--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-cayman
 title: Jason's Homepage
+logo: /_image/logo.png
 description: Provide My Software Updates!
+show_downloads: true
 markdown: kramdown
