--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: Jason's Homepage
-avatar: /_image/logo.png
+avatar: logo.png
 description: Provide My Software Updates!
 markdown: kramdown
