--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
 title: Jason's Homepage
-description: Provide My Software Updates!
+description: Technique Support!
 markdown: kramdown
+theme: jekyll-theme-cayman
