--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Jason's Homepage
-description: Technique Support!
+description: Tools & Support!
 markdown: kramdown
 theme: jekyll-theme-cayman
