--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: Jason's Homepage
+title: Jason's Offical Website
+description: Welcome To Jason's Offical Website!
 markdown: kramdown
 theme: jekyll-theme-cayman
