--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Jason's Offical Website
-description: Welcome To Jason's Offical Website!
+description: Welcome To Jason's Official Website!
 markdown: kramdown
 theme: jekyll-theme-cayman
